<resources>
    <string name="app_name">HW1_Robots</string>
    <string name="begin_msg">Begin the Game!</string>
    <string name="red_robot_msg">Red Robot\'s Turn</string>
    <string name="white_robot_msg">White Robot\'s Turn</string>
    <string name="yellow_robot_msg">Yellow Robot\'s Turn</string>
    <string name="reward_A_text">Reward A</string>
    <string name="reward_B_text">Reward B</string>
    <string name="reward_C_text">Reward C</string>
    <string name="reward_D_text">Reward D</string>
    <string name="reward_E_text">Reward E</string>
    <string name="reward_F_text">Reward F</string>
    <string name="reward_G_text">Reward G</string>
    <string name="error_reward">Unknown Item</string>
    <string name="reward_A_energy_amount">1</string>
    <string name="reward_B_energy_amount">2</string>
    <string name="reward_C_energy_amount">3</string>
    <string name="reward_D_energy_amount">3</string>
    <string name="reward_E_energy_amount">4</string>
    <string name="reward_F_energy_amount">4</string>
    <string name="reward_G_energy_amount">7</string>
    <string name="purchased">Purchased</string>
    <string name="insufficient">Insufficient Resources</string>
    <string name="robot_energy">0</string>
</resources>