<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/yellowRobot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/king_of_detroit_robot_white_large" />

        <TextView
            android:id="@+id/availableEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_B_energy_amount"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/availableEnergyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/energy_counter" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/reward1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/reward_A_text" />

        <Button
            android:id="@+id/reward2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/reward_B_text" />

        <Button
            android:id="@+id/reward3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reward_C_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/reward1Energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_A_energy_amount"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/rewardAEnergyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            app:srcCompat="@drawable/energy_counter" />

        <TextView
            android:id="@+id/reward2Energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_B_energy_amount"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/rewardBEnergyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            app:srcCompat="@drawable/energy_counter" />

        <TextView
            android:id="@+id/reward3Energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/reward_C_energy_amount"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/rewardCEnergyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/energy_counter" />

    </LinearLayout>

</LinearLayout>